--- a/homework5/html.html
+++ b/homework5/html.html
@@ -13,9 +13,9 @@
     <div id="products" ></div>
   
     <div class="card text-bg-primary mb-3" style="max-width: 18rem;">
-        <div class="header">Title</div>
+        <div class="header">T</div>
         <div class="body">
-          <p class="text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="text">Some </p>
         </div>
         <!-- <button type="button" class="btn btn-outline-danger">Search</button> -->
     <script src="./js.js"></script>
